wp-content/themes/ow/src/components/page-templates/default-page/_default-page-styles.scss
.modal {
    padding: 1rem;

    &.opened {
        display: flex;
        background: rgba($black, .4);
    }

    &__close {
        top: 0;
        right: 0;
        cursor: pointer;
    }
}

#eu-cookie-bar {
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    padding: .9375rem 0;
    background: $white;
    color: $gray-second;
    box-shadow: 0 0 .375rem rgba($dark, .15);

    @extend %font-size-14;

    @include media-breakpoint-up(md) {
        max-width: calc(100% - 12.5rem);
        padding: .5rem;
    }

    button {
        min-width: 4rem;
        min-height: 2rem;
        border-radius: 0;
    }

    a {
        color: $dark;
    }

    .cookies-default {
        display: inline-flex;
    }

    .cookies-trigger {
        margin-left: .3125rem;
        font-weight: 700;
        text-decoration: underline;
        cursor: pointer;
    }

    .cookies-content {
        display: none;
        width: calc(100% - 7rem);
        text-align: left;

        @include media-breakpoint-up(md) {
            width: calc(100% - 10rem);
        }
    }
}

.single-post-preview {
    border-bottom: 1px solid $gray;

    @include fluid(padding-bottom, 1.5rem , 3.125rem);
    @include fluid(margin-bottom, 1.5rem , 3.125rem);

    &__category-wrapper {
        border-bottom: 1px solid $gray;

        @include fluid(padding-bottom, 1.5rem , 3.125rem);
        @include fluid(margin-bottom, 1.5rem , 3.125rem);
    }

    &__slider-wrapper {
        height: 20rem;

        .acf-block-image-with-content & {
            @include media-breakpoint-up(md) {
                height: 25rem;
            }
        }
    }

    &__arrows {
        top: 0;
        bottom: 0;
        height: 3.125rem;
        margin: auto;
    }

    &__slider-counter {
        bottom: 0;
        left: 0;
        width: 4.5rem;
        height: 3.125rem;
    }

    &__controls {
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        margin: 0 auto;
    }

    &__button {
        width: 2.25rem;
        max-width: 100%;
        height: 2.25rem;

        &--next {
            @include media-breakpoint-up(md) {
                transform: translateX(50%);
            }
        }

        &--prev {
            @include media-breakpoint-up(md) {
                transform: translateX(-50%);
            }
        }

        &--alt {
            @include media-breakpoint-up(md) {
                transform: translateX(0);
            }
        }
    }

    .tns-nav {
        display: none;
    }

    &__list {
        grid-template-columns: repeat(2, .4fr);
    }

    &__list-item {
        &:before {
            content: '';
            position: absolute;
            top: .6rem;
            bottom: 0;
            left: 0;
            width: .5rem;
            height: .5rem;
            border-radius: 50%;
            background: $primary;

            @include media-breakpoint-up(md) {
                top: .5rem;
            }
        }
    }
}

